--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.1",
   "description": "Strategic Intelligence MCP Server - connecting technical progress to business outcomes with systematic strategic planning",
   "main": "dist/index.js",
+  "bin": {
+    "strategic-intelligence-mcp": "dist/bin/cli.js"
+  },
   "type": "module",
   "scripts": {
     "build": "tsc",
@@ -32,7 +35,8 @@
   "files": [
     "dist/**/*",
     "README.md",
-    "USAGE_GUIDE.md"
+    "USAGE_GUIDE.md",
+    "bin/**/*"
   ],
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.5.0",
